--- a/.travis.yml
+++ b/.travis.yml
@@ -2,18 +2,17 @@
 language: julia
 os:
   - linux
-  - osx
+  # - osx
 julia:
-  - release
-  - nightly
+  - 0.5
+  - 0.6
+  # - nightly
 notifications:
   email: false
-# uncomment the following lines to override the default test script
-#script:
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia -e 'Pkg.clone(pwd()); Pkg.build("ExpFamily"); Pkg.test("ExpFamily"; coverage=true)'
+script:
+    - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+    - julia -e 'Pkg.clone(pwd()); Pkg.test("ExpFamily"; coverage=true)'
 after_success:
-  # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("ExpFamily")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
   - julia -e 'cd(Pkg.dir("ExpFamily")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  # - julia -e 'Pkg.add("Documenter"); cd(Pkg.dir("PDMP")); include(joinpath("docs", "make.jl"))'
